@@ -1691,6 +1691,7 @@ doprintpeers(
 	u_int32 u32;
 	const char *dstadr_refid = "0.0.0.0";
 	const char *serverlocal;
+	char *drbuf = NULL;
 	size_t drlen;
 	u_long stratum = 0;
 	long ppoll = 0;
@@ -1772,12 +1773,13 @@ doprintpeers(
 				} else if (decodenetnum(value, &refidadr)) {
 					if (SOCK_UNSPEC(&refidadr))
 						dstadr_refid = "0.0.0.0";
-					else if (ISREFCLOCKADR(&refidadr))
+					else if (ISREFCLOCKADR(&refidadr)) {
 						dstadr_refid =
 						    refnumtoa(&refidadr);
-					else
+					} else {
 						dstadr_refid =
 						    stoa(&refidadr);
+					}
 				} else {
 					have_da_rid = FALSE;
 				}
@@ -1796,19 +1798,25 @@ doprintpeers(
 				} else if (decodenetnum(value, &refidadr)) {
 					if (SOCK_UNSPEC(&refidadr))
 						dstadr_refid = "0.0.0.0";
-					else if (ISREFCLOCKADR(&refidadr))
+					else if (ISREFCLOCKADR(&refidadr)) {
 						dstadr_refid =
-						    refnumtoa(&refidadr);
-					else {
-						char *buf = emalloc(10);
-						int i = ntohl(refidadr.sa4.sin_addr.s_addr);
-
-						snprintf(buf, 10,
-							"%0x", i);
-						dstadr_refid = buf;
-					//xprintf(stderr, "apeervarlist refid: value=<%x>\n", i);
+							refnumtoa(&refidadr);
+						if (pvl == apeervarlist) {
+							/*
+							 * restrict refid to
+							 * 8 chars [Bug 3850]
+							 */
+							dstadr_refid =
+								trunc_right(
+									dstadr_refid,
+									8);
+						}
+					} else {
+						drbuf = emalloc(10);
+						snprintf(drbuf, 10, "%0x",
+							 SRCADR(&refidadr));
+						dstadr_refid = drbuf;
 					}
-					//xprintf(stderr, "apeervarlist refid: value=<%s>\n", value);
 				} else {
 					have_da_rid = FALSE;
 				}
@@ -1931,6 +1939,7 @@ doprintpeers(
 			drlen = strlen(dstadr_refid);
 			makeascii(drlen, dstadr_refid, fp);
 		}
+		free(drbuf);
 		if (pvl == apeervarlist) {
 			while (drlen++ < 9)
 				xputc(' ', fp);
